// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts should match a snapshot with accounts 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-86 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-auto"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <p
            class="el-text-base el-body-text"
          >
            Support
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text"
          >
            Your first step is to provision a user account for the solution using the button below.
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
          >
            Please see also below for more resources and assistance.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Provision User
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            View Docs
          </button>
          <div>
            <button
              class="el-mb5 el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Video
            </button>
          </div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Help
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-text-base el-title"
          >
            User Accounts
          </h1>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Please note that creating the first user account is a long running process and can take several minutes to complete.
          </p>
          <h2
            class="el-text-base el-subtitle"
          >
            User Account Details
          </h2>
          <div
            class="el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="2"
            role="table"
          >
            <div
              class="mocked-styled-94 el-table-headers-row"
              role="row"
            >
              <div
                aria-label="User Name"
                class="mocked-styled-95 el-table-header"
                role="columnheader"
              >
                User Name
              </div>
              <div
                aria-label="Status"
                class="mocked-styled-95 el-table-header"
                role="columnheader"
              >
                Status
              </div>
              <div
                class="mocked-styled-95 el-table-header"
                role="columnheader"
              >
                <span
                  class="el-intent-default el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name settings"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-103 el-table-row-container"
              role="row"
            >
              <div
                class="mocked-styled-96 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name contact"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5m0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-104 el-table-cell-content"
                    data-narrow-label="User Name"
                  >
                    hiyaall
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-104 el-table-cell-content"
                    data-narrow-label="Status"
                  >
                    User is active
                  </div>
                </div>
                <div
                  class="mocked-styled-102 el-table-expandable-row-trigger-cell"
                  role="cell"
                  tabindex="0"
                >
                  <span
                    class="el-intent-default el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name more"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="mocked-styled-106 el-table-expandable-row"
              >
                <div
                  class="mocked-styled-107 el-table-expandable-container"
                >
                  <div
                    class="mocked-styled-2 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Update
                      </button>
                      <button
                        class="el-intent-danger el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Deactivate
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-86 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-auto"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <p
          class="el-text-base el-body-text"
        >
          Support
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text"
        >
          Your first step is to provision a user account for the solution using the button below.
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
        >
          Please see also below for more resources and assistance.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Provision User
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          View Docs
        </button>
        <div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Video
          </button>
        </div>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Help
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          User Accounts
        </h1>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Please note that creating the first user account is a long running process and can take several minutes to complete.
        </p>
        <h2
          class="el-text-base el-subtitle"
        >
          User Account Details
        </h2>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="2"
          role="table"
        >
          <div
            class="mocked-styled-94 el-table-headers-row"
            role="row"
          >
            <div
              aria-label="User Name"
              class="mocked-styled-95 el-table-header"
              role="columnheader"
            >
              User Name
            </div>
            <div
              aria-label="Status"
              class="mocked-styled-95 el-table-header"
              role="columnheader"
            >
              Status
            </div>
            <div
              class="mocked-styled-95 el-table-header"
              role="columnheader"
            >
              <span
                class="el-intent-default el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name settings"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-103 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-96 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <span
                  class="el-intent-default el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1.25rem;"
                    title="Icon image with name contact"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5m0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="mocked-styled-104 el-table-cell-content"
                  data-narrow-label="User Name"
                >
                  hiyaall
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-104 el-table-cell-content"
                  data-narrow-label="Status"
                >
                  User is active
                </div>
              </div>
              <div
                class="mocked-styled-102 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-106 el-table-expandable-row"
            >
              <div
                class="mocked-styled-107 el-table-expandable-container"
              >
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Update
                    </button>
                    <button
                      class="el-intent-danger el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Deactivate
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accounts should match a snapshot with no accounts 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-86 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-auto"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <p
            class="el-text-base el-body-text"
          >
            Support
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text"
          >
            Your first step is to provision a user account for the solution using the button below.
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
          >
            Please see also below for more resources and assistance.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Provision User
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            View Docs
          </button>
          <div>
            <button
              class="el-mb5 el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Video
            </button>
          </div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Help
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-text-base el-title"
          >
            User Accounts
          </h1>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Please note that creating the first user account is a long running process and can take several minutes to complete.
          </p>
          <h2
            class="el-text-base el-subtitle"
          >
            User Account Details
          </h2>
          <div
            class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
            role="status"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="mocked-styled-4 el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name info"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              aria-live="polite"
              class="el-pn-content"
            >
              No accounts yet provisioned for your organisation
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-86 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-auto"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <p
          class="el-text-base el-body-text"
        >
          Support
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text"
        >
          Your first step is to provision a user account for the solution using the button below.
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
        >
          Please see also below for more resources and assistance.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Provision User
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          View Docs
        </button>
        <div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Video
          </button>
        </div>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Help
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          User Accounts
        </h1>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Please note that creating the first user account is a long running process and can take several minutes to complete.
        </p>
        <h2
          class="el-text-base el-subtitle"
        >
          User Account Details
        </h2>
        <div
          class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="mocked-styled-4 el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            No accounts yet provisioned for your organisation
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
